W1 Registrarse como usuario
Falta:
- El contador de dinero de cada usuario deberá mostrarse, en todas las vistas de acceso privado
para el usuario, al lado de su email. Si fuese necesario se podrá almacenar el monto disponible en
base de datos.
- Es obligatorio realizar las validaciones del lado del servidor.

--- a/views/bregistro.html
+++ b/views/bregistro.html
@@ -13,10 +13,31 @@
         </div>
     </div>
     <div class="form-group">
+        <label class="control-label col-sm-2" for="password">Nombre:</label>
+        <div class="col-sm-10">
+            <input type="text"  class="form-control" name="nombre"
+                   placeholder="nombre" required="true" />
+        </div>
+    </div>
+    <div class="form-group">
+        <label class="control-label col-sm-2" for="password">Apellidos:</label>
+        <div class="col-sm-10">
+            <input type="text"  class="form-control" name="apellidos"
+                   placeholder="apellidos" required="true" />
+        </div>
+    </div>
+    <div class="form-group">
         <label class="control-label col-sm-2" for="password">Password:</label>
         <div class="col-sm-10">
             <input type="password"  class="form-control" name="password"
                    placeholder="contraseña" required="true" />
+        </div>
+    </div>
+    <div class="form-group">
+        <label class="control-label col-sm-2" for="password">Repita password:</label>
+        <div class="col-sm-10">
+            <input type="password"  class="form-control" name="password2"
+                   placeholder="contraseña repetida" required="true" />
         </div>
     </div>
     <div class="form-group">
