--- a/views/base.html
+++ b/views/base.html
@@ -30,6 +30,8 @@
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="/registrarse"><span class="glyphicon glyphicon-user"></span> Registrate</a></li>
                 <li><a href="/identificarse"><span class="glyphicon glyphicon-log-in"></span> Identifícate</a></li>
+                <!-- TODO: mostrar solo si esta en sesion -->
+                <li><a href="/deslogear"><span class="glyphicon glyphicon-log-in"></span> Cerrar Sesión</a></li>
             </ul>
         </div>
     </div>
