Parte de Alberto de Web completada

--- a/views/base.html
+++ b/views/base.html
@@ -25,13 +25,20 @@
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
+                {% if usuario!=null %}
+                <li style="color:white; padding-top:5px; padding-right:10px; padding-left:10px;"> {{usuario.email}} <br> {{usuario.dinero}}€ </li>
+                {% endif %}
                 <li id="mOferta" class="active"><a href="/ofertas">Ofertas</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li sec:authorize="!isAuthenticated()"><a href="/registrarse"><span class="glyphicon glyphicon-user"></span> Registrate</a></li>
-                <li sec:authorize="!isAuthenticated()"><a href="/identificarse"><span class="glyphicon glyphicon-log-in"></span> Identifícate</a></li>
-                <!-- TODO: mostrar solo si esta en sesion -->
-                <li sec:authorize="isAuthenticated()"><a href="/deslogear"><span class="glyphicon glyphicon-log-in"></span> Cerrar Sesión</a></li>
+
+                {% if usuario!=null %}
+                <li><a href="/deslogear"><span class="glyphicon glyphicon-log-in"></span>Cerrar Sesión</a></li>
+                {% else %}
+                <li><a href="/registrarse"><span class="glyphicon glyphicon-user"></span> Registrate</a></li>
+                <li><a href="/identificarse"><span class="glyphicon glyphicon-log-in"></span> Identifícate</a></li>
+                {% endif %}
+
             </ul>
         </div>
     </div>
