--- a/views/base.html
+++ b/views/base.html
@@ -33,10 +33,10 @@
             <ul class="nav navbar-nav navbar-right">
 
                 {% if usuario!=null %}
-                <li><a href="/deslogear"><span class="glyphicon glyphicon-log-in"></span>Cerrar Sesión</a></li>
+                <li><a href="/deslogear"><span class="glyphicon glyphicon-log-out"></span>Cerrar Sesión</a></li>
                 {% else %}
-                <li><a href="/registrarse"><span class="glyphicon glyphicon-user"></span> Registrate</a></li>
-                <li><a href="/identificarse"><span class="glyphicon glyphicon-log-in"></span> Identifícate</a></li>
+                <li><a href="/registrarse"><span class="glyphicon glyphicon-user"></span>Registrarse</a></li>
+                <li><a href="/identificarse"><span class="glyphicon glyphicon-log-in"></span>Identifícate</a></li>
                 {% endif %}
 
             </ul>
