--- a/views/base.html
+++ b/views/base.html
@@ -27,8 +27,18 @@
             <ul class="nav navbar-nav">
                 {% if usuario!=null %}
                 <li style="color:white; padding-top:5px; padding-right:10px; padding-left:10px;"> {{usuario.email}} <br> {{usuario.dinero}}€ </li>
+
+                <li id="mOferta" class="dropdown"><a
+                        class="dropdown-toggle" data-toggle="dropdown" href="#">Ofertas
+                </a>
+                    <ul class="dropdown-menu">
+                        <li><a href="/ofertas/agregar">Agregar oferta</a></li>
+                        <li><a href="/ofertas/propias">Ofertas propias</a></li>
+                        <li><a href="/ofertas/buscar">Buscar ofertas</a></li>
+                        <li><a href="/compras">Ofertas compradas</a></li>
+                    </ul>
+                </li>
                 {% endif %}
-                <li id="mOferta" class="active"><a href="/ofertas">Ofertas</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
 
