--- a/views/bagregar.html
+++ b/views/bagregar.html
@@ -21,7 +21,7 @@
         <label class="control-label col-sm-2" for="precio">Precio (€):</label>
         <div class="col-sm-10">
             <input type="number" class="form-control" name="precio"
-                   placeholder="2.50" required="true" />
+                   placeholder="2.50" step="0.01" min="0" required="true" />
         </div>
     </div>
     <div class="form-group">
