--- a/views/bofertaspropias.html
+++ b/views/bofertaspropias.html
@@ -9,7 +9,7 @@
                 <th>Titulo</th>
                 <th>Detalle</th>
                 <th>Fecha</th>
-                <th>Precio</th>
+                <th>Precio (€)</th>
                 <th>Estado</th>
                 <th class="col-md-1"></th>
             </tr>
