--- a/views/bofertas.html
+++ b/views/bofertas.html
@@ -25,7 +25,7 @@
             <th>Titulo</th>
             <th>Detalle</th>
             <th>Fecha</th>
-            <th>Precio</th>
+            <th>Precio ($)</th>
             <th>Usuario</th>
             <th class="col-md-1"></th>
         </tr>
