--- a/views/base.html
+++ b/views/base.html
@@ -38,6 +38,11 @@
                         <li><a href="/compras">Ofertas compradas</a></li>
                     </ul>
                 </li>
+
+                {% if usuario.perfil=="Admin" %}
+                <li><a href="/usuarios">Usuarios</a></li>
+                {% endif %}
+
                 {% endif %}
             </ul>
             <ul class="nav navbar-nav navbar-right">
