--- a/views/bofertaspropias.html
+++ b/views/bofertaspropias.html
@@ -25,7 +25,7 @@
                 <td>Comprada</td>
                 {% else %}
                 <td>En venta</td>
-                <td><a href="/oferta/eliminar/{{oferta._id.toString() }}">Eliminar</a> <br>
+                <td><a id="{{ oferta.titulo }}" href="/oferta/eliminar/{{oferta._id.toString() }}">Eliminar</a> <br>
                 {% endif %}
                 </td>
             </tr>
