--- a/views/bagregar.html
+++ b/views/bagregar.html
@@ -25,6 +25,12 @@
         </div>
     </div>
     <div class="form-group">
+        <label class="control-label col-sm-2" for="destacada">Marcar como destacada (20€):</label>
+        <div class="col-sm-10">
+            <input type="checkbox" value="checked" name="destacada">
+        </div>
+    </div>
+    <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
             <button type="submit" class="btn btn-primary">Agregar</button>
         </div>
