--- a/views/bofertas.html
+++ b/views/bofertas.html
@@ -17,6 +17,41 @@
         </form>
     </div>
 </div>
+
+{% if ofertasDestacadas.length>0 %}
+<h2>Ofertas Destacadas</h2>
+<div>
+    <table class="table table-hover">
+        <thead>
+        <tr>
+            <th>Titulo</th>
+            <th>Detalle</th>
+            <th>Fecha</th>
+            <th>Precio ($)</th>
+            <th>Usuario</th>
+            <th class="col-md-1"></th>
+        </tr>
+        </thead>
+        <tbody>
+        {% for oferta in ofertasDestacadas %}
+        <tr>
+            <td>{{ oferta.titulo }}</td>
+            <td>{{ oferta.detalle }}</td>
+            <td>{{ oferta.fecha }}</td>
+            <td>{{ oferta.precio }}</td>
+            <td>{{ oferta.usuario }}</td>
+            <td><a id="{{oferta.titulo}}" href="/oferta/comprar/{{oferta._id.toString() }}">Comprar</a> <br>
+            </td>
+        </tr>
+        {% endfor %}
+        </tbody>
+    </table>
+</div>
+<br>
+{% endif %}
+
+
+
 <h2>Ofertas</h2>
 <div>
     <table class="table table-hover">
@@ -31,7 +66,7 @@
         </tr>
         </thead>
         <tbody>
-        {% for oferta in ofertas %}
+        {% for oferta in ofertasNoDestacadas %}
         <tr>
             <td>{{ oferta.titulo }}</td>
             <td>{{ oferta.detalle }}</td>
@@ -50,7 +85,7 @@
     <ul class="pagination">
         {% for pagina in paginas %}
         <li class="page-item" id="pi-{{ pagina }}">
-            <a class="page-link" href="/tienda?pg={{ pagina }}" >{{ pagina }}</a>
+            <a class="page-link" href="/ofertas/buscar?pg={{ pagina }}" >{{ pagina }}</a>
         </li>
         {% endfor %}
         <script>
@@ -58,4 +93,11 @@
         </script>
     </ul>
 </div>
+
+
+
+
+
+
+
 {% endblock %}
